...

    static func showNetworkError(from view: UIViewController? = UIApplication.shared.windows.filter {$0.isKeyWindow}.first?.rootViewController) {
        showErrorAlert(with: "Seems like you have network issue, please connect and try again.", from: view)
    }
    
    static func showErrorAlert(with message: String, from view: UIViewController? = UIApplication.shared.windows.filter {$0.isKeyWindow}.first?.rootViewController) {
        showAlert(title: "Oops!", with: message, from: view)
    }
    
    static func showAlert(title: String, with message: String, from view: UIViewController? = UIApplication.shared.windows.filter {$0.isKeyWindow}.first?.rootViewController) {
        let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .destructive, handler: nil))
        view?.present(alert, animated: true, completion: nil)
    }
}

class Colors {
    var gl:CAGradientLayer!
...
