...
                                        <rect key="frame" x="0.0" y="28" width="414" height="37"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PBJ-UB-FRa" id="kBA-nH-bmp">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="37"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView hidden="YES" clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="warning" translatesAutoresizingMaskIntoConstraints="NO" id="kkj-h7-124">
                                                    <rect key="frame" x="373" y="6" width="25" height="25"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="25" id="GSH-Cm-4at"/>
                                                        <constraint firstAttribute="height" constant="25" id="tr4-x8-L1h"/>
                                                    </constraints>
                                                </imageView>
...
